--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -59,7 +59,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.5.0.BUILD-SNAPSHOT
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -120,7 +120,6 @@ platform_definition:
         - spring-boot-starter-tomcat
         - spring-boot-starter-undertow
         - spring-boot-starter-validation
-        - spring-boot-starter-velocity
         - spring-boot-starter-web
         - spring-boot-starter-websocket
         - spring-boot-starter-web-services
@@ -208,17 +207,17 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.3.RELEASE
+      version: 5.0.0.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
         - spring-beans
         - spring-core
         - spring-context
+        - spring-context-indexer
         - spring-context-support
         - spring-expression
         - spring-instrument
-        - spring-instrument-tomcat
         - spring-jdbc
         - spring-jms
         - spring-messaging
@@ -227,8 +226,8 @@ platform_definition:
         - spring-test
         - spring-tx
         - spring-web
+        - spring-web-reactive
         - spring-webmvc
-        - spring-webmvc-portlet
         - spring-websocket
     - name: Spring HATEOAS
       groupId: org.springframework.hateoas
@@ -285,7 +284,7 @@ platform_definition:
         - spring-integration-flow
     - name: Spring Integration Java DSL
       groupId: org.springframework.integration
-      version: 1.2.0.BUILD-SNAPSHOT
+      version: 1.2.0.RC1
       build:
         repository: https://github.com/spring-projects/spring-integration-java-dsl
         compileWith: jdk8
@@ -345,7 +344,7 @@ platform_definition:
         - spring-plugin-metadata
     - name: Spring REST Docs
       groupId: org.springframework.restdocs
-      version: 1.1.2.RELEASE
+      version: 1.2.0.BUILD-SNAPSHOT
       modules:
         - spring-restdocs-core
         - spring-restdocs-mockmvc
@@ -389,12 +388,13 @@ platform_definition:
         - spring-security-oauth2
     - name: Spring Session
       groupId: org.springframework.session
-      version: 1.2.2.RELEASE
+      version: 1.3.0.M2
       modules:
         - spring-session
         - spring-session-data-gemfire
         - spring-session-data-mongo
         - spring-session-data-redis
+        - spring-session-hazelcast
         - spring-session-jdbc
       build:
         repository: https://github.com/spring-projects/spring-session
@@ -460,20 +460,16 @@ platform_definition:
     'javax.servlet:servlet-api': 'javax.servlet:javax.servlet-api'
     'javax.transaction:transaction-api': 'javax.transaction:javax.transaction-api' # See https://github.com/spring-projects/spring-data-neo4j/issues/272
     'javax.ws.rs:jsr311-api': 'javax.ws.rs:javax.ws.rs-api'
-    'org.apache.tomcat:catalina': 'org.apache.tomcat:tomcat-catalina'
     'org.jdom:jdom': 'org.jdom:jdom2'
-    'org.projectreactor:reactor-tcp': 'org.projectreactor:reactor-net'
     'rome:rome': 'net.java.dev.rome:rome'
   missing_dependencies:
     ignored_dependencies:
-      'org.springframework.batch:spring-batch-infrastructure':
-        - 'org.hibernate:hibernate-entitymanager'
-      'org.springframework.data:spring-data-jpa':
-        - 'org.hibernate:hibernate-entitymanager'
-      'org.springframework:spring-orm':
-        - 'org.hibernate:hibernate-entitymanager'
+      'org.springframework.webflow:spring-faces':
+       - 'org.springframework:spring-webmvc-portlet'
+      'org.springframework.webflow:spring-webflow':
+       - 'org.springframework:spring-webmvc-portlet'
       'org.springframework.data:spring-data-commons':
-        - 'org.scala-lang:scala-library'
+       - 'org.scala-lang:scala-library'
     ignored_modules:
       - 'org.springframework.boot:spring-boot-actuator-docs' # Its dependencies are provided
       - 'org.springframework.boot:spring-boot-cli' # The CLI doesn't expose its dependencies to applications
@@ -489,9 +485,7 @@ platform_definition:
       - 'ch.qos.logback:logback-core'
       - 'com.datastax.cassandra:cassandra-driver-mapping'
       - 'com.fasterxml:classmate'
-      - 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
-      - 'com.fasterxml.jackson.dataformat:jackson-dataformat-smile'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
       - 'com.fasterxml.jackson.datatype:jackson-datatype-guava'
       - 'com.fasterxml.jackson.datatype:jackson-datatype-jaxrs'
@@ -507,10 +501,10 @@ platform_definition:
       - 'com.jayway.jsonpath:json-path-assert'
       - 'com.unboundid:unboundid-ldapsdk'
       - 'com.zaxxer:HikariCP'
+      - 'commons-digester:commons-digester'
       - 'io.dropwizard.metrics:metrics-ganglia'
       - 'io.dropwizard.metrics:metrics-graphite'
       - 'io.dropwizard.metrics:metrics-servlets'
-      - 'javax.interceptor:javax.interceptor-api'
       - 'javax.servlet:jstl'
       - 'mysql:mysql-connector-java'
       - 'net.java.dev.jna:jna'
@@ -551,6 +545,7 @@ platform_definition:
       - 'org.apache.activemq:artemis-core-client'
       - 'org.apache.activemq:artemis-commons'
       - 'org.apache.activemq:artemis-service-extensions'
+      - 'org.apache.openjpa:openjpa'
       - 'org.apache.httpcomponents:httpcore'
       - 'org.apache.tomcat:tomcat-jsp-api'
       - 'org.apache.wss4j:wss4j-ws-security-common'
@@ -583,6 +578,7 @@ platform_definition:
       - 'org.eclipse.jetty:jetty-jmx'
       - 'org.eclipse.jetty:jetty-jsp'
       - 'org.eclipse.jetty:jetty-plus'
+      - 'org.eclipse.jetty:jetty-proxy'
       - 'org.eclipse.jetty:jetty-security'
       - 'org.eclipse.jetty:jetty-xml'
       - 'org.ehcache:ehcache-clustered'
