--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -69,6 +69,7 @@
 		<castor.version>1.4.1</castor.version>
 		<commonj.version>1.1.1</commonj.version>
 		<commons-cli.version>1.3.1</commons-cli.version>
+		<commons-dbcp.version>1.4</commons-dbcp.version>
 		<commons-fileupload.version>1.3.2</commons-fileupload.version>
 		<commons-io.version>2.5</commons-io.version>
 		<commons-httpclient.version>3.1</commons-httpclient.version>
@@ -510,6 +511,11 @@
 				<groupId>commons-cli</groupId>
 				<artifactId>commons-cli</artifactId>
 				<version>${commons-cli.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-dbcp</groupId>
+				<artifactId>commons-dbcp</artifactId>
+				<version>${commons-dbcp.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-fileupload</groupId>
