Align with latest Spring Boot 1.5 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -350,7 +350,7 @@ platform_definition:
         - spring-restdocs-restassured
     - name: Spring Retry
       groupId: org.springframework.retry
-      version: 1.2.0.BUILD-SNAPSHOT
+      version: 1.2.0.RC1
       modules:
         - spring-retry
     - name: Spring Security
