--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -42,8 +42,10 @@ platform_definition:
         - spring-amqp
         - spring-rabbit
       build:
-        compileWith: jdk8
         repository: https://github.com/spring-projects/spring-amqp
+        compileWith: jdk8
+        runTestsWith:
+          - jdk8
     - name: Spring Batch
       groupId: org.springframework.batch
       version: 3.0.7.RELEASE
