--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -51,7 +51,7 @@
 		<spring-integration-kafka.version>1.3.1.RELEASE</spring-integration-kafka.version>
 		<spring-integration-splunk.version>1.1.0.RELEASE</spring-integration-splunk.version>
 		<spring-kafka.version>1.1.0.RELEASE</spring-kafka.version>
-		<spring-ldap.version>2.1.0.RELEASE</spring-ldap.version>
+		<spring-ldap.version>2.2.0.RC1</spring-ldap.version>
 		<spring-web-flow.version>2.4.4.RELEASE</spring-web-flow.version>
 		<spring-web-services.version>${spring-ws.version}</spring-web-services.version>
 
