--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -357,7 +357,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 4.1.3.RELEASE
+      version: 4.2.0.BUILD-SNAPSHOT
       build:
         repository: https://github.com/spring-projects/spring-security
         tagPrefix:
