--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -319,6 +319,7 @@ platform_definition:
       version: 2.2.0.RC1
       build:
         repository: https://github.com/spring-projects/spring-ldap
+        compileWith: jdk8
         tagPrefix:
       modules:
         - spring-ldap-core
