Check out the correct branch for Spring AMQP 1.6.4 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -43,6 +43,7 @@ platform_definition:
         - spring-rabbit
       build:
         repository: https://github.com/spring-projects/spring-amqp
+        checkout: 1.6.x
         compileWith: jdk8
         runTestsWith:
           - jdk8
