--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -155,7 +155,8 @@
 		<reactor-netty.version>0.5.1.RELEASE</reactor-netty.version>
 		<rest-assured.version>2.9.0</rest-assured.version>
 		<rometools.version>1.6.1</rometools.version>
-		<rxjava.version>1.1.9</rxjava.version>
+		<rxjava.version>1.2.1</rxjava.version>
+		<rxjava-reactive-streams.version>1.2.0</rxjava-reactive-streams.version>
 		<rxjava2.version>2.0.0-RC2</rxjava2.version>
 		<rxnetty.version>0.5.2-rc.4</rxnetty.version>
 		<selenium-htmlunit-driver.version>${selenium.version}</selenium-htmlunit-driver.version>
@@ -563,6 +564,11 @@
 			<dependency>
 				<groupId>io.reactivex</groupId>
 				<artifactId>rxjava</artifactId>
+				<version>${rxjava.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.reactivex</groupId>
+				<artifactId>rxjava-reactive-streams</artifactId>
 				<version>${rxjava.version}</version>
 			</dependency>
 			<dependency>
