--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -310,7 +310,7 @@ platform_definition:
         - spring-integration-splunk
     - name: Spring Kafka
       groupId: org.springframework.kafka
-      version: 1.1.1.RELEASE
+      version: 1.1.2.BUILD-SNAPSHOT
       modules:
         - spring-kafka
         - spring-kafka-test
