--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -239,7 +239,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.3.4.RELEASE
+      version: 4.3.5.BUILD-SNAPSHOT
       build:
         compileWith: jdk8
         runTestsWith:
