--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -210,7 +210,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.3.RELEASE
+      version: 4.3.4.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
