--- a/platform-tests/src/test/resources/gradle-header.template
+++ b/platform-tests/src/test/resources/gradle-header.template
@@ -19,6 +19,7 @@ repositories {
 	mavenLocal()
 	maven { url 'http://repo.spring.io/libs-snapshot' }
 	maven { url 'http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts' }
+	maven { url 'http://m2.neo4j.org/content/repositories/snapshots' }
 	mavenCentral()
 }
 
