--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -321,7 +321,7 @@ platform_definition:
           - jdk8
     - name: Spring LDAP
       groupId: org.springframework.ldap
-      version: 2.2.0.RC1
+      version: 2.2.0.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-ldap
         compileWith: jdk8
