Add dependency management for taglibs-standard-impl and -spec
Closes gh-456

--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -772,7 +772,17 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.taglibs</groupId>
+				<artifactId>taglibs-standard-impl</artifactId>
+				<version>${taglibs-standard.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.taglibs</groupId>
 				<artifactId>taglibs-standard-jstlel</artifactId>
+				<version>${taglibs-standard.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.taglibs</groupId>
+				<artifactId>taglibs-standard-spec</artifactId>
 				<version>${taglibs-standard.version}</version>
 			</dependency>
 			<dependency>
