--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -577,6 +577,8 @@ platform_definition:
       - 'org.apache.logging.log4j:log4j-web'
       - 'org.apache.logging.log4j:log4j-1.2-api'
       - 'org.apache.poi:poi-scratchpad'
+      - 'org.apache.taglibs:taglibs-standard-impl'
+      - 'org.apache.taglibs:taglibs-standard-spec'
       - 'org.apache.tomcat:tomcat-jsp-api'
       - 'org.apache.wss4j:wss4j-ws-security-common'
       - 'org.codehaus.groovy:groovy-ant'
