--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -595,6 +595,7 @@ platform_definition:
       - 'org.infinispan:infinispan-spring4-common'
       - 'org.javassist:javassist'
       - 'org.jboss.logging:jboss-logging'
+      - 'org.jetbrains.kotlin:kotlin-runtime'
       - 'org.jooq:jooq-codegen'
       - 'org.jooq:jooq-meta'
       - 'org.mariadb.jdbc:mariadb-java-client'
